# RootBad

./: .gitignore  README.md
src/RootBad/: build.gradle
src/RootBad/src/main/: AndroidManifest.xml
src/RootBad/src/main/cpp/: CMakeLists.txt
src/RootBad/src/main/cpp/injector/: daemon.c  injector.c  injector.cpp
src/RootBad/src/main/cpp/intruder/: intruder.cpp
src/RootBad/src/main/java/com/aeonlucid/rootbad/: MainActivity.java
src/RootBad/src/main/res/values/: strings.xml
src/app/: settings.gradle
src/app/RootBad/: build.gradle
src/app/RootBad/src/androidTest/java/com/aeonlucid/rootbad/: ExampleInstrumentedTest.java
src/app/RootBad/src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/app/RootBad/src/test/java/com/aeonlucid/rootbad/: ExampleUnitTest.java
src/app/gradle/wrapper/: gradle-wrapper.properties
tools/: download_deps.py  run_injector.bat  run_injector.sh
